# tone_ale

./: .gitignore  CMakeLists.txt  README.md
amen_beat/: CMakeLists.txt  amen_beat.cpp
audio_interface/: CMakeLists.txt  audio_interface.cpp
cab_sim/: CMakeLists.txt  cab_sim.cpp
common/: CMakeLists.txt  capsense.pio  common.h  common_capsense.cpp  common_i2cv.cpp  common_pins.cpp  i2cv.pio  usb_audio.cpp
compiled_effects/: amen_beat.uf2  audio_interface.uf2  cab_sim.uf2  delay.uf2  fuzz.uf2  line_select.uf2  lowpass.uf2  phaser.uf2  rig.uf2  samplerate_reducer.uf2  vibrato.uf2  wah.uf2  wavefolder.uf2
delay/: CMakeLists.txt  delay.cpp
fuzz/: CMakeLists.txt  fuzz.cpp
hw/: tone_ale.kicad_pcb  tone_ale.kicad_pro  tone_ale.kicad_sch
line_select/: CMakeLists.txt  line_select.cpp
lowpass/: CMakeLists.txt  lowpass.cpp
phaser/: CMakeLists.txt  phaser.cpp
rig/: CMakeLists.txt  rig.cpp
samplerate_reducer/: CMakeLists.txt  samplerate_reducer.cpp
tone_ale_common/: CMakeLists.txt  capsense.pio  filter_coefs.h  i2cv.pio  tone_ale.cpp  tone_ale.h  tone_ale_capsense.cpp  tone_ale_i2cv.cpp  tone_ale_pins.cpp  tone_ale_usb.h  tusb_config.h  usb_audio.cpp
unstable/: CMakeLists.txt  unstable.cpp
vibrato/: CMakeLists.txt  vibrato.cpp
wah/: CMakeLists.txt  wah.cpp
wavefolder/: CMakeLists.txt  wavefolder.cpp
